add get routes in polygon
