# docs/swagger.json
@@ -31,6 +31,20 @@
                     "Route"
                 ],
                 "summary": "Get all routes",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "55.745359 37.658375",
+                        "name": "ne",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "55.971152 63.507595",
+                        "name": "sw",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -135,6 +149,11 @@
         },
         "models.Coordinates": {
             "type": "object",
+            "required": [
+                "height",
+                "latitude",
+                "longitude"
+            ],
             "properties": {
                 "height": {
                     "type": "string",
@@ -152,6 +171,10 @@
         },
         "models.Mark": {
             "type": "object",
+            "required": [
+                "point",
+                "title"
+            ],
             "properties": {
                 "description": {
                     "type": "string",
@@ -173,6 +196,19 @@
         },
         "models.Route": {
             "type": "object",
+            "required": [
+                "climb",
+                "creator_id",
+                "days",
+                "difficult",
+                "is_moderate",
+                "marks",
+                "name",
+                "region",
+                "route",
+                "start",
+                "type"
+            ],
             "properties": {
                 "best_time_to_go": {
                     "type": "string",
